Update MY RESPONSIVE  CV.html

--- a/MY RESPONSIVE  CV.html
+++ b/MY RESPONSIVE  CV.html
@@ -24,7 +24,7 @@
 <div class="row">
          <div class="col-lg-4  text-white text-center py-4 " id="id01">
          <div class="header-left">
-         <img src="C:\img\SKR.jpg" alt="photo" class="img-thumbnail rounded-circle mb-2">
+         <img src="SKR.jpg" alt="photo" class="img-thumbnail rounded-circle mb-2">
                  
          <h3>SUMIT KUMAR</h3>
          <hr>
