--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>  
 <title> JavaScript Calculator </title>  
   
-<link rel="stylesheet" href="C:\My VS Code File\CSS\Calc.css">
-<script src="C:\My VS Code File\JAVASCRIPT\Calc.js"></script>
+<link rel="stylesheet" href="style.css">
+<script src="script.js"></script>
   
   
 </head>  
