--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>  
 <html lang = "en">  
 <head>  
-<title> JavaScript Calculator </title>  
-  
+<title> My Calculator </title>  
+<meta name="viewport" content="width=device-width, initial-scale=1.0">    
 <link rel="stylesheet" href="style.css">
 <script src="script.js"></script>
   
